Added download links and CLI commands